[package]
name = "pj"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
log = "0.4.22"
pingora-core = "0.4.0"
tokio = { version = "1.41.1", features = ["signal", "rt-multi-thread"] }
bytes = "1.6.0"
jemallocator = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }


