[package]
name = "pj"
version = "0.2.2"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
log = "0.4.22"
pingora-core = "0.4.0"
tokio = { version = "1.41.1", features = ["signal", "rt-multi-thread"] }
bytes = "1.6.0"
jemallocator = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3.8"


